--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
+rand_core = "0.6.4"
 sha2 = "0.10.9"
